loadtest/istio-catalog-fault-injection-critical.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalog-fault-injection
  namespace: catalog-dev
  labels:
    app.kubernetes.io/part-of: retail-store
    app.kubernetes.io/component: chaos-engineering
    chaos.retail-store/tier: critical
spec:
  hosts:
    - catalog
  http:
    - fault:
        abort:
          percentage:
            value: 3.0         # 3% fast burn -> critical tier
          httpStatus: 500
      route:
        - destination:
            host: catalog
